--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,14 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
 # Package Files #
+target
 *.jar
 *.war
 *.nar
