--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<dependencies>
 		<!--  Test dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>2.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
